fix: scroll bar overlap issue (#51)

--- a/alchemy-20-front/styles/ChangePass.module.css
+++ b/alchemy-20-front/styles/ChangePass.module.css
@@ -7,6 +7,8 @@
   z-index: 1;
   top: 0;
   left: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .container {
